--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "url": "git@github.com:coreui/coreui-pro-react-admin-template.git"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/coreui-pro": "^2.1.14",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "apollo-boost": "^0.4.7",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
@@ -37,6 +39,7 @@
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "formik": "^1.5.1",
+    "graphql": "^14.6.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
